--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ docs/images/Thumbs.db
 src/test/data/ConfigUtilTest/SomeFile.json
 src/test/data/JsonUserPrefsStorageTest/SomeFile.json
 src/test/data/XmlAddressBookStorageTest/SomeFile.xml
+docs/.UserGuide.md.html
+docs/.DeveloperGuide.md.html
