--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ matrix:
   include:
     - jdk: oraclejdk8
 script: travis_retry ./gradlew clean headless allTests coverage coveralls -i
-before_install:
+before_script:
           - "export DISPLAY=:99.0"
           - "sh -e /etc/init.d/xvfb start"
+          - sleep 3 # give xvfb some time to start
 
 addons:
   apt:
