--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ src/test/data/JsonUserPrefsStorageTest/SomeFile.json
 src/test/data/XmlAddressBookStorageTest/SomeFile.xml
 docs/.UserGuide.md.html
 docs/.DeveloperGuide.md.html
+doc/*.html
